# pygount

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGES.md  CONTRIBUTING.md  LICENSE.txt  README.md  README.rst  build.xml  dev-requirements.txt  mkdocs.yaml  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  ci.yaml
docs/: api.md  api.rst  background.md  background.rst  changes.md  changes.rst  conf.py  continuous-integration.md  continuous-integration.rst  contributing.md  contributing.rst  index.md  index.rst  installation.md  installation.rst  json.md  json.rst  requirements.txt  usage.md  usage.rst
pygount/: __init__.py  analysis.py  command.py  common.py  git_graph.py  git_storage.py  language_classification.py  lexers.py  summary.py  write.py  xmldialect.py
scripts/: build_documentation.sh  build_movie.sh  test_coverage.sh  update_dependencies.sh
tests/: __init__.py  _common.py  count_pygount.sh  test_analysis.py  test_command.py  test_common.py  test_encoding.py  test_git_storage.py  test_lexers.py  test_summary.py  test_write.py  test_xmldialect.py
