[tool.black]
line-length = 120
include = '\.pyi?$'
target-version = [
    "py38",
    "py39",
    "py310",
    "py311",
    "py312",
]
exclude = '''
/(
    \.eggs
  | \.git
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
default_section = "THIRDPARTY"
known_first_party = "pygount,scripts"

[tool.pytest.ini_options]
minversion = "7.2"
addopts = [
    "-rA"
]
testpaths = [
    "tests",
]

[tool.poetry]
name = "pygount"
version = "1.7.0"
description = "count source lines of code (SLOC) using pygments"
readme = "README.md"
authors = ["Thomas Aglassinger <roskakori@users.sourceforge.net>"]
license = "BSD"
homepage = "https://github.com/roskakori/pygount"
repository = "https://github.com/roskakori/pygount.git"
documentation = "https://pygount.readthedocs.io"
keywords = ["code analysis", "count", "SLOC"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Environment :: Console",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: BSD License",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Topic :: Software Development",
]
packages = [
    { include = "pygount" },
]

[tool.poetry.dependencies]
python = ">=3.8, <3.13"  # NOTE We cannot use <4 because of coveralls.
pygments = "^2"
chardet = "^5"
rich = ">=9, <14"
gitpython = "^3"

[tool.poetry.dev-dependencies]
coveralls = "^4"
coverage = "^7"
pytest = "^8"
pytest-cov = "^5"
pre-commit = "^3"
pur = "^7"
twine = "^5"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^7"

[tool.poetry.scripts]
pygount = "pygount.command:main"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/roskakori/pygount/issues"
"Changes" = "https://pygount.readthedocs.io/en/latest/changes.html"

[pycodestyle]
max-line-length = 120

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
